Refactor buildings api according to sonnar cube